# pega-texto-debugger

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  o-que-precisa.md
cmake/: 3rd-party.cmake
include/: command.h  match_actions.h  pega-texto-debugger.h  print_expr.h  ptdb.h  shell.h
include/pega-texto-debugger/: options.h  ptdb.h  wrap.h
src/: CMakeLists.txt  command.c  main.c  match_actions.c  print_expr.c  ptdb.c  shell.c  wrap.c
